--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -293,7 +293,11 @@
         "id": "التسلسل",
         "title": "العنوان",
         "image": "الصوره",
-        "actions": "اجراءات"
+        "price": "السعر",
+        "actions": "اجراءات",
+        "deleted": "حذف",
+        "serviceDeletedSuccess": "تم حذف الخدمه بنجاح",
+        "createService": "اضافه خدمه جديده"
       },
       "agents": {
         "id": "التسلسل",
@@ -302,7 +306,7 @@
         "phone": "الهاتف الجوال",
         "status": "الحاله",
         "online": "أونلاين",
-        "offline": "أوفلاين",
+        "Offline": "أوفلاين",
         "numberOfClients": "عدد المستخدمين ",
         "actions": "اجراءات",
         "createAgent": "اضافه موظف"
@@ -313,7 +317,7 @@
         "email": "البريد الالكترونى",
         "status": "الحاله",
         "online": "أونلاين",
-        "offline": "أوفلاين",
+        "Offline": "أوفلاين",
         "numberOfTranslations": "عدد الترجمات",
         "actions": "اجراءات",
         "createTranslator": "اضافه مترجم"
@@ -321,10 +325,7 @@
       "supervisors": {
         "id": "التسلسل",
         "name": "الاسم",
-        "email": "البريد الالكترونى",
         "status": "الحاله",
-        "online": "أونلاين",
-        "offline": "أوفلاين",
         "chats": "الدردشه",
         "requests": "الطلبات",
         "actions": "اجراءات",
@@ -333,7 +334,6 @@
       "users": {
         "id": "التسلسل",
         "name": "الاسم",
-        "email": "البريد الالكترونى",
         "status": "الحاله",
         "chats": "الدردشه",
         "requests": "الطلبات",
