--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -158,11 +158,11 @@
           "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
           "reopen": "إعادة فتح",
           "anyNotes": "أى ملا حظات تريد اضافتها...",
-          "reassign": {
+          "assign": {
             "alert": "هل تريد تعيين إلى مترجم آخر؟",
             "desc": "هل أنت متأكد من تعيين هذا الطلب إلى مترجم آخر",
             "chooseTranslator": "اختار المترجم...",
-            "reassign": "تعيين"
+            "assign": "تعيين"
           },
           "approve": {
             "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
@@ -249,11 +249,11 @@
           "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
           "reopen": "إعادة فتح",
           "anyNotes": "أى ملا حظات تريد اضافتها...",
-          "reassign": {
+          "assign": {
             "alert": "هل تريد تعيين إلى مترجم آخر؟",
             "desc": "هل أنت متأكد من تعيين هذا الطلب إلى مترجم آخر",
             "chooseTranslator": "اختار المترجم...",
-            "reassign": "تعيين"
+            "assign": "تعيين"
           },
           "approve": {
             "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
