all admin pages enhanced

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -16,7 +16,7 @@
       "requestStatus": {
         "PENDING": "قيد الانتظار",
         "IN_PROGRESS": "في تَقَدم",
-        "DONE": "تم"
+        "DONE": "منتهي"
       },
       "dropzone": {
         "clickToUpload": "انقر للتحميل",
@@ -25,85 +25,86 @@
         "dropFilesToUpload": "قم بإسقاط الملفات للتحميل"
       },
       "table": {
-        "noResults": "لا يوجد نتائج"
+        "noResults": "لا نتائج"
       },
       "chat": {
-        "youAreStillInQueue": "أنت لا تزال في قائمة الانتظار..."
+        "youAreStillInQueue": "أنت لا تزال في الطابور.."
       },
       "footer": {
-        "copyright": "©{{year}}-المترجم. كل الحقوق محفوظة."
+        "copyright": "© {{year}}-المترجم. "
       }
     },
     "home": {
-      "title": "مرحبا بكم في منصة المترجم",
-      "content": "مرحبًا بك في مؤسسة المترجم الحديث للنسخ والتصوير! 🌐📚 لسنا مجرد مشروع؛ بل نحن قوة ديناميكية في خدمات الترجمة، نقدم حلولًا متقدمة يمكن الوصول إليها في أي وقت وفي أي مكان. انضم إلينا في تشكيل مستقبل الخدمات الترجمية! 💻🌍",
-      "button": "إبدأ من هنا",
+      "title": "مرحبا بكم في المترجم",
+      "content": "مرحبًا بكم في مؤسسة المترجم الحديث للنسخ والتصوير! ",
+      "button": "البدء",
       "aboutUs": {
-        "title": "عن المترجم",
-        "description": "مؤسسة المترجم الحديث للنسخ والتصوير التابعة للسجل التجاري رقم 5855339388 هو مشروع قائم ساهمنا من خلاله بتقديم خدماتنا المطوّرة لأكبر عدد ممكن من الطلّاب. وبفعل التقدّم الرقمي الهائل الذي يشهده العالم في الوقت الحالي، أصبحت خدماتنا متوفّرة عن بُعد وفي أي وقت ."
+        "title": "عن المترجيم",
+        "description": "مؤسسة المترجم الحديث للنسخ والتصوير، التابعة للسجل التجاري رقم 5855339388، هي مشروع قائم نساهم من خلاله بتقديم خدماتنا المتطورة لأكبر عدد ممكن من الطلاب. "
       }
     },
     "register": {
-      "title": "مرحبا بكم في منصة المترجم",
-      "name": "الإسم بالكامل",
-      "email": "البريد الالكترونى",
-      "phone": "الهاتف الجوال",
-      "password": "كلمه المرور",
-      "register": "إنشاء حساب",
-      "check": "لديك حساب بالفعل ؟ ",
+      "title": "مرحبا بكم في المترجم!",
+      "name": "الاسم الكامل",
+      "email": "بريد إلكتروني",
+      "phone": "هاتف",
+      "password": "كلمة المرور",
+      "register": "يسجل",
+      "check": " هل لديك حساب؟",
       "login": "تسجيل الدخول",
-      "nameError": "تأكد من وجود الاسم",
-      "emailError": "تأكد من وجود البريد الإلكترونى",
-      "emailValidation": "البريد الإلكترونى غير صحيح ",
-      "phoneError": "تأكد من وجود الهاتف الجوال",
-      "passError": "تأكد من وجود كلمه المرور"
+      "nameError": "مطلوب اسم",
+      "emailError": "البريد الالكتروني مطلوب",
+      "emailValidation": "البريد الإلكتروني غير صالح",
+      "phoneError": "الهاتف مطلوب",
+      "passError": "كلمة المرور مطلوبة"
     },
     "login": {
-      "title": "أهلا بعودتك !",
-      "email": "البريد الالكترونى",
-      "password": "كلمه المرور",
+      "title": "مرحبًا بعودتك!",
+      "email": "بريد إلكتروني",
+      "password": "كلمة المرور",
       "login": "تسجيل الدخول",
-      "anonymousLogin": "تسجيل الدخول مجهول الهويه",
-      "accountCheck": "ليس لديك حساب ؟ ",
-      "register": "إنشاء حساب"
+      "anonymousLogin": "تسجيل دخول مجهول",
+      "accountCheck": "ليس لديك حساب؟",
+      "register": "يسجل"
     },
     "sidebar": {
       "logout": "تسجيل خروج"
     },
     "chat": {
-      "name": "name",
-      "create": "إنشاء طلب جديد",
-      "endChat": "إنهاء المحادثه",
-      "typeMessage": "اكتب رسالتك هنا ....",
-      "youAreStillInQueue": "مازلت قيد الانتظار..."
+      "name": "اسم",
+      "create": "إنشاء طلب",
+      "endChat": "نهاية المحادثة",
+      "typeMessage": "اكتب رسالة ....",
+      "youAreStillInQueue": "أنت لا تزال في الطابور.."
     },
     "user": {
       "layout": {
-        "dashboard": "الرئيسيه",
+        "dashboard": "لوحة القيادة",
         "requests": "الطلبات"
       },
       "home": {
-        "title": "اختار خدمه",
+        "title": "اختر خدمة",
         "desc": "اختر من بين الخدمات المختارة بعناية والمصممة لك.",
-        "createRequest": "إضافه طلب",
+        "createRequest": "إنشاء طلب",
         "checkServices": "ألا تستطيع إيجاد ما تبحث عنه؟",
-        "chat": "يمكنكم الدردشه معنا",
+        "chat": "دردش معنا",
         "whatsapp": "واتس اب"
       },
       "requests": {
-        "create": "إنشاء طلب جديد",
+        "create": "إنشاء طلب",
         "createForm": {
-          "title": "العنوان",
-          "description": "الوصف",
-          "create": "إنشاء طلب جديد",
+          "title": "عنوان",
+          "description": "وصف",
+          "create": "إنشاء طلب",
           "errors": {
             "required": {
               "title": "العنوان مطلوب",
-              "description": "الوصف مطلوب"
+              "description": "الوصف مطلوب",
+              "price": "السعر مطلوب"
             }
           }
         },
-        "chat": "الدردشه معنا",
+        "chat": "دردش معنا",
         "table": {
           "title": "عنوان",
           "status": "حالة",
@@ -111,69 +112,69 @@
         }
       },
       "singleRequest": {
-        "basicInfo": "المعلومات الأساسيه",
-        "requestId": "رقم الطلب:",
-        "service": "الخدمه:",
-        "translator": "المترجم:",
-        "status": "الحاله:",
-        "description": "الوصف:",
+        "basicInfo": "معلومات اساسية",
+        "requestId": "طلب معرف:",
+        "service": "خدمة:",
+        "translator": "مترجم:",
+        "status": "حالة:",
+        "description": "وصف:",
         "attachments": "المرفقات",
-        "downloadAll": "تنزيل جميع المرفقات",
-        "translations": "الترجمات"
+        "downloadAll": "تحميل الكل",
+        "translations": "ترجمات"
       }
     },
     "supervisor": {
       "layout": {
-        "dashboard": "الرئيسيه",
-        "chats": "قائمه الدردشه",
+        "dashboard": "لوحة القيادة",
+        "chats": "الدردشات",
         "requests": "الطلبات"
       },
       "requests": {
-        "chatWithUs": "الدردشه معنا",
-        "createRequest": "إضافه طلب جديد",
+        "chatWithUs": "دردش معنا",
+        "createRequest": "إنشاء طلب",
         "table": {
-          "title": "العنوان",
-          "status": "الحاله",
-          "actions": "اجراءات"
+          "title": "عنوان",
+          "status": "حالة",
+          "actions": "أجراءات"
         }
       },
       "createRequest": {
-        "chooseService": "اختار خدمه",
+        "chooseService": "اختر خدمة",
         "desc": "اختر من بين الخدمات المختارة بعناية والمصممة لك."
       },
       "singleRequest": {
-        "basicInfo": "المعلومات الأساسيه",
-        "requestId": "رقم الطلب:",
-        "service": "الخدمه:",
-        "agentName": "اسم الموظف",
-        "translator": "المترجم:",
-        "status": "الحاله:",
-        "description": "الوصف:",
+        "basicInfo": "معلومات اساسية",
+        "requestId": "طلب معرف:",
+        "service": "خدمة:",
+        "agentName": "اسم العميل",
+        "translator": "مترجم:",
+        "status": "حالة:",
+        "description": "وصف:",
         "attachments": "المرفقات",
-        "downloadAll": "تنزيل جميع المرفقات",
-        "translations": "الترجمات",
-        "approve": "موافقة",
+        "downloadAll": "تحميل الكل",
+        "translations": "ترجمات",
+        "approve": "يعتمد",
         "assign": "تعيين",
         "dialog": {
           "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
           "reopen": "إعادة فتح",
-          "anyNotes": "أى ملا حظات تريد اضافتها...",
+          "anyNotes": "أي ملاحظات تريد إرفاقها...",
           "assign": {
-            "alert": "هل تريد تعيين إلى مترجم آخر؟",
-            "desc": "هل أنت متأكد من تعيين هذا الطلب إلى مترجم آخر",
-            "chooseTranslator": "اختار المترجم...",
+            "alert": "تعيين للمترجم؟",
+            "desc": "هل أنت متأكد من تعيين هذا الطلب للمترجم",
+            "chooseTranslator": "اختر مترجم...",
             "assign": "تعيين"
           },
           "approve": {
             "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
-            "desc": "هل أنت متأكد من رغبتك في الموافقة على الملاحظة: هذا أمر دائم",
-            "cancel": "الغاء",
-            "approve": "موافقه"
+            "desc": "هل أنت متأكد أنك تريد الموافقة على الملاحظة: هذا أمر دائم",
+            "cancel": "يلغي",
+            "approve": "يعتمد"
           }
         },
         "toast": {
-          "title": "لقد تم اضافه الترجمه بنجاح",
-          "error": "حدث خطأ"
+          "title": "تم إرسال الترجمة بنجاح",
+          "error": "هناك خطأ ما"
         }
       },
       "chats": {
@@ -185,36 +186,36 @@
     },
     "translator": {
       "layout": {
-        "dashboard": "الرئيسيه",
+        "dashboard": "لوحة القيادة",
         "requests": "الطلبات"
       },
       "requests": {
-        "chatWithUs": "الدردشه معنا",
-        "createRequest": "إضافه طلب جديد",
+        "chatWithUs": "دردش معنا",
+        "createRequest": "إنشاء طلب",
         "table": {
-          "title": "العنوان",
-          "status": "الحاله",
-          "actions": "اجراءات"
+          "title": "عنوان",
+          "status": "حالة",
+          "actions": "أجراءات"
         }
       },
       "singleRequest": {
-        "notes": "ملاحظات : ",
-        "desc": " Lorem ipsum dolor sit amet consectetur. Placerat vel turpis est morbi pharetra tortor quis. Aenean enim faucibus fringilla id elementum malesuada. Praesent turpis facilisis ornare scelerisque nec elementum. Massa dignissim gravida euismod ullamcorper nulla scelerisque lectus lectus sed.Lorem ipsum dolor sit amet consectetur. Placerat vel turpis est morbi",
+        "notes": "ملحوظات :",
+        "desc": " لوريم إيبسوم دولور الجلوس أميت كونسيكتور. ",
         "attachments": "المرفقات",
-        "submit": "اضافه طلب"
+        "submit": "يُقدِّم"
       },
       "submitRequest": {
-        "submitYourFiles": "اضف ملفاتك",
+        "submitYourFiles": "أرسل ملفاتك",
         "toast": {
-          "title": "لقد تم اضافه الترجمه بنجاح",
-          "error": "حدث خطأ"
+          "title": "تم إرسال الترجمة بنجاح",
+          "error": "هناك خطأ ما"
         }
       }
     },
     "agent": {
       "layout": {
-        "dashboard": "الرئيسيه",
-        "chats": "قائمه الدردشه",
+        "dashboard": "لوحة القيادة",
+        "chats": "الدردشات",
         "requests": "الطلبات"
       },
       "chats": {
@@ -224,141 +225,146 @@
         "lastMessage": "اخر رسالة"
       },
       "requests": {
-        "chatWithUs": "الدردشه معنا",
-        "createRequest": "إضافه طلب جديد",
+        "chatWithUs": "دردش معنا",
+        "createRequest": "إنشاء طلب",
         "table": {
-          "title": "العنوان",
-          "status": "الحاله",
-          "actions": "اجراءات"
+          "title": "عنوان",
+          "status": "حالة",
+          "actions": "أجراءات"
         }
       },
       "singleRequest": {
-        "basicInfo": "المعلومات الأساسيه",
-        "requestId": "رقم الطلب:",
-        "service": "الخدمه:",
-        "agentName": "اسم الموظف",
-        "translator": "المترجم:",
-        "status": "الحاله:",
-        "description": "الوصف:",
+        "basicInfo": "معلومات اساسية",
+        "requestId": "طلب معرف:",
+        "service": "خدمة:",
+        "agentName": "اسم العميل",
+        "translator": "مترجم:",
+        "status": "حالة:",
+        "description": "وصف:",
         "attachments": "المرفقات",
-        "downloadAll": "تنزيل جميع المرفقات",
-        "translations": "الترجمات",
-        "approve": "موافقة",
+        "downloadAll": "تحميل الكل",
+        "translations": "ترجمات",
+        "approve": "يعتمد",
         "assign": "تعيين",
         "dialog": {
           "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
           "reopen": "إعادة فتح",
-          "anyNotes": "أى ملا حظات تريد اضافتها...",
+          "anyNotes": "أي ملاحظات تريد إرفاقها...",
           "assign": {
-            "alert": "هل تريد تعيين إلى مترجم آخر؟",
-            "desc": "هل أنت متأكد من تعيين هذا الطلب إلى مترجم آخر",
-            "chooseTranslator": "اختار المترجم...",
+            "alert": "تعيين للمترجم؟",
+            "desc": "هل أنت متأكد من تعيين هذا الطلب للمترجم",
+            "chooseTranslator": "اختر مترجم...",
             "assign": "تعيين"
           },
           "approve": {
             "alert": "هل أنت متأكد من إعادة فتح هذا الطلب؟",
-            "desc": "هل أنت متأكد من رغبتك في الموافقة على الملاحظة: هذا أمر دائم",
-            "cancel": "الغاء",
-            "approve": "موافقه"
+            "desc": "هل أنت متأكد أنك تريد الموافقة على الملاحظة: هذا أمر دائم",
+            "cancel": "يلغي",
+            "approve": "يعتمد"
           }
         }
       }
     },
     "admin": {
       "layout": {
-        "dashboard": "الرئيسيه ",
-        "services": "الخدمات",
-        "chats": "قائمه الدردشه",
-        "requests": "قائمه الطلبات",
-        "agents": "الموظفين",
+        "dashboard": "لوحة القيادة",
+        "services": "خدمات",
+        "chats": "الدردشات",
+        "requests": "الطلبات",
+        "agents": "عملاء",
         "tanslators": "المترجمين",
         "supervisors": "المشرفين",
         "users": "المستخدمين",
         "reports": "التقارير"
       },
       "dashboard": {
-        "welcomeToAlmotarjim": "مرحبا بك فى منصه المترجم",
-        "description": "لوحه التحكم الخاصه بالتقارير",
-        "chats": "الدردشه",
+        "welcomeToAlmotarjim": "مرحبا بكم في المترجم",
+        "description": "تقارير لوحة تحكم المشرف",
+        "chats": "الدردشات",
         "requests": "الطلبات",
-        "agents": "الموظفين",
-        "open": "المتاح",
-        "closed": "المغلقه",
+        "agents": "عملاء",
+        "open": "يفتح",
+        "closed": "مغلق",
         "pending": "قيد الانتظار",
-        "inProgress": "فى تَقَدم",
-        "online": "أونلاين",
-        "offline": "أوفلاين"
+        "inProgress": "في تَقَدم",
+        "online": "متصل",
+        "offline": "غير متصل"
       },
       "chooseService": {
-        "id": "التسلسل",
-        "title": "العنوان",
-        "image": "الصوره",
-        "price": "السعر",
-        "actions": "اجراءات",
-        "deleted": "حذف",
-        "serviceDeletedSuccess": "تم حذف الخدمه بنجاح",
-        "createService": "اضافه خدمه جديده"
+        "id": "بطاقة تعريف",
+        "title": "عنوان",
+        "image": "صورة",
+        "price": "سعر",
+        "actions": "أجراءات",
+        "deleted": "تم الحذف",
+        "serviceDeletedSuccess": "تم حذف الخدمة بنجاح",
+        "createService": "إضافة خدمة جديدة"
       },
       "createService": {
-        "created": "تم الاضافه",
-        "serviceCreatedSuccess": "تم اضافه الخدمه بنجاح",
+        "created": "مخلوق",
+        "serviceCreatedSuccess": "تم إنشاء الخدمة بنجاح",
         "error": "خطأ",
-        "someFieldsAreInvalid": "بعض البيانات خاطئه",
-        "addNewService": "اضافه خدمه جديده",
-        "englishTitle": "العنوان بالغه الانجليزيه",
-        "arabicTitle": "العنوان بالغه العربيه",
-        "englishDesc": "الوصف باللغه الانجليزيه",
-        "arabicDesc": "الوصف باللغه العرببه",
-        "price": "سعر الخدمه",
-        "uploadServiceImage": "اضافه صوره الخدمه",
-        "uploadImage": "اضف الصوره"
+        "someFieldsAreInvalid": "بعض الحقول غير صالحة",
+        "addNewService": "إضافة خدمة جديدة",
+        "englishTitle": "العنوان باللغة الانجليزية",
+        "arabicTitle": "العنوان العربي",
+        "englishDesc": "الوصف باللغة الإنجليزية",
+        "arabicDesc": "الوصف العربي",
+        "price": "سعر الخدمة",
+        "uploadServiceImage": "تحميل صورة الخدمة",
+        "uploadImage": "تحميل الصور"
       },
       "agents": {
-        "id": "التسلسل",
-        "name": "الاسم",
-        "email": "البريد الالكترونى",
-        "phone": "الهاتف الجوال",
-        "status": "الحاله",
-        "online": "أونلاين",
-        "Offline": "أوفلاين",
-        "numberOfClients": "عدد المستخدمين ",
-        "actions": "اجراءات",
-        "createAgent": "اضافه موظف"
+        "id": "بطاقة تعريف",
+        "name": "اسم",
+        "email": "بريد إلكتروني",
+        "phone": "هاتف",
+        "status": "حالة",
+        "online": "متصل",
+        "offline": "غير متصل",
+        "numberOfClients": "عدد العملاء",
+        "actions": "أجراءات",
+        "createAgent": "إنشاء وكيل"
       },
       "translators": {
-        "id": "التسلسل",
-        "name": "الاسم",
-        "email": "البريد الالكترونى",
-        "status": "الحاله",
-        "online": "أونلاين",
-        "Offline": "أوفلاين",
+        "id": "بطاقة تعريف",
+        "name": "اسم",
+        "email": "بريد إلكتروني",
+        "status": "حالة",
+        "online": "متصل",
+        "offline": "غير متصل",
         "numberOfTranslations": "عدد الترجمات",
-        "actions": "اجراءات",
-        "createTranslator": "اضافه مترجم"
+        "actions": "أجراءات",
+        "createTranslator": "إنشاء مترجم"
       },
       "supervisors": {
-        "id": "التسلسل",
-        "name": "الاسم",
-        "status": "الحاله",
-        "chats": "الدردشه",
+        "id": "بطاقة تعريف",
+        "name": "اسم",
+        "email": "بريد إلكتروني",
+        "status": "حالة",
+        "online": "متصل",
+        "offline": "غير متصل",
+        "chats": "الدردشات",
         "requests": "الطلبات",
-        "actions": "اجراءات",
-        "createSupervisor": "اضافه مشرف"
+        "actions": "أجراءات",
+        "createSupervisor": "إنشاء مشرف"
       },
       "users": {
-        "id": "التسلسل",
-        "name": "الاسم",
-        "status": "الحاله",
-        "chats": "الدردشه",
+        "id": "بطاقة تعريف",
+        "name": "اسم",
+        "email": "بريد إلكتروني",
+        "status": "حالة",
+        "image": "صوره",
+        "chats": "الدردشات",
         "requests": "الطلبات",
-        "actions": "اجراءات"
+        "actions": "أجراءات"
       },
       "createAgent": {
-        "created": "تم الاضافه",
-        "agentCreatedSuccessfully": "لقد تم اضافه موظف جديد بنجاح",
+        "created": "مخلوق",
+        "agentCreatedSuccessfully": "تم إنشاء الوكيل بنجاح",
         "error": "خطأ",
-        "someFieldsAreInvalid": "بعض البيانات خاطئه",
-        "createNewAgent": "إضافه موظف جديد"
+        "someFieldsAreInvalid": "بعض الحقول غير صالحة",
+        "createNewAgent": "إنشاء وكيل جديد"
       }
     }
   }
