--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -39,7 +39,7 @@
       "content": "مرحبًا بكم في مؤسسة المترجم الحديث للنسخ والتصوير! ",
       "button": "البدء",
       "aboutUs": {
-        "title": "عن المترجيم",
+        "title": "عن المترجم",
         "description": "مؤسسة المترجم الحديث للنسخ والتصوير، التابعة للسجل التجاري رقم 5855339388، هي مشروع قائم نساهم من خلاله بتقديم خدماتنا المتطورة لأكبر عدد ممكن من الطلاب. "
       }
     },
