--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -279,10 +279,10 @@
         "services": "خدمات",
         "chats": "الدردشات",
         "requests": "الطلبات",
-        "agents": "عملاء",
+        "agents": "الموظفين",
         "tanslators": "المترجمين",
         "supervisors": "المشرفين",
-        "users": "المستخدمين",
+        "users": "العملاء",
         "reports": "التقارير"
       },
       "dashboard": {
