--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -421,6 +421,12 @@
         "error": "Error",
         "someFieldsAreInvalid": "Some fields are invalid",
         "updateNewTranslator": "Update New translator"
+      },
+      "viewTranslator": {
+        "pagesNumber": "Pages Number",
+        "totalPages": "Total Pages",
+        "id": "ID",
+        "createdAt": "Created At"
       }
     }
   }
